<resources>
    <string name="app_name">Playlist Maker</string>

    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="settings">Настройки</string>

    <string name="dark_theme">Темная тема</string>
    <string name="share">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>

    <string name="share_app_link">https://practicum.yandex.ru/android-developer/</string>

    <string name="support_mail">murenkovalexey@tut.by</string>
    <string name="support_default_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_default_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>

    <string name="agreement_link">https://yandex.ru/legal/practicum_offer/</string>

    <string name="search_not_found">Ничего не нашлось</string>
    <string name="search_conn_error">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="search_history_caption">Вы искали</string>
    <string name="search_history_clear">Очистить историю</string>
    <string name="refresh">Обновить</string>

    <string name="track_time">Длительность</string>
    <string name="collection_name">Альбом</string>
    <string name="release_year">Год</string>
    <string name="genre_name">Жанр</string>
    <string name="country_name">Страна</string>

    <string name="media_tab_playlists">Плейлисты</string>
    <string name="media_empty_playlists">Вы не создали\nни одного плейлиста</string>

    <string name="media_tab_favorites">Избранные треки</string>
    <string name="media_empty_favorites">Ваша медиатека пуста</string>
</resources>