<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/colorPrimary"
    android:orientation="vertical"
    android:padding="@dimen/dimen_8"
    tools:context="com.practicum.playlistmaker.settings.ui.SettingsFragment" >

    <TextView
        style="@style/top_line"
        android:text="@string/settings" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/settings_darkTheme"
        style="@style/activity_settings_item"
        android:text="@string/dark_theme" />

    <TextView
        android:id="@+id/settings_share_app"
        style="@style/activity_settings_item"
        android:text="@string/share"
        app:drawableRightCompat="@drawable/share" />

    <TextView
        android:id="@+id/settings_support"
        style="@style/activity_settings_item"
        android:text="@string/support"
        app:drawableRightCompat="@drawable/support" />

    <TextView
        android:id="@+id/settings_agreement"
        style="@style/activity_settings_item"
        android:text="@string/user_agreement"
        app:drawableRightCompat="@drawable/arrow_forward" />

</LinearLayout>