<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/yp_white"
    android:padding="@dimen/activity_padding"
    android:orientation="vertical">

    <TextView
        android:id="@+id/settings_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textSize="@dimen/main_text_size"
        android:layout_margin="8dp"
        android:textColor="@color/yp_black"
        android:drawablePadding="@dimen/main_icon_padding"
        app:drawableLeftCompat="@drawable/arrow_back" />

    <Switch
        android:layout_width="match_parent"
        android:layout_height="@dimen/main_button_icon_size"
        android:text="@string/dark_theme"
        android:textColor="@color/yp_black"
        android:layout_margin="@dimen/settings_item_margin"
        android:textSize="@dimen/settings_text_size"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/share"
        android:textColor="@color/yp_black"
        android:textSize="@dimen/settings_text_size"
        android:layout_margin="@dimen/settings_item_margin"
        app:drawableRightCompat="@drawable/share" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/support"
        android:textColor="@color/yp_black"
        android:textSize="@dimen/settings_text_size"
        android:layout_margin="@dimen/settings_item_margin"
        app:drawableRightCompat="@drawable/support" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_agreement"
        android:textColor="@color/yp_black"
        android:textSize="@dimen/settings_text_size"
        android:layout_margin="@dimen/settings_item_margin"
        app:drawableRightCompat="@drawable/arrow_forward" />

</LinearLayout>