<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    android:orientation="vertical"
    android:padding="@dimen/dimen_8"
    tools:context="com.practicum.playlistmaker.search.ui.SearchFragment">

    <TextView
        android:id="@+id/search_back"
        style="@style/top_line"
        android:text="@string/search" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/search_text"
            style="@style/edit_text_single_line"
            android:hint="@string/search"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:singleLine="true"
            app:drawableLeftCompat="@drawable/search" />

        <ImageView
            android:id="@+id/search_clear"
            style="@style/cross_on_edit_text"
            android:visibility="invisible" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/search_history_group"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/dimen_24"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            style="@style/search_caption"
            android:layout_margin="@dimen/dimen_16"
            android:text="@string/search_history_caption" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/search_history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/search_progress_bar"
        style="@style/progress_bar"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/search_results"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/search_tracks"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        <TextView
            android:id="@+id/search_not_found"
            style="@style/search_caption"
            android:text="@string/search_not_found"
            app:drawableTopCompat="@drawable/search_not_found" />

        <LinearLayout
            android:id="@+id/search_conn_error"
            style="@style/search_caption">

            <TextView
                style="@style/search_caption"
                android:text="@string/search_conn_error"
                app:drawableTopCompat="@drawable/search_conn_error" />

            <Button
                android:id="@+id/search_refresh"
                style="@style/search_action_button"
                android:text="@string/refresh" />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>