<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/yp_blue"
    android:padding="@dimen/activity_padding"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/yp_white"
        android:textSize="@dimen/main_text_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/find"
            android:text="@string/search"
            android:textAllCaps="false"
            android:backgroundTint="@color/yp_white"
            android:textColor="@color/yp_black"
            android:textSize="@dimen/main_text_size"
            android:layout_width="match_parent"
            android:layout_margin="@dimen/main_button_margin"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:icon="@drawable/search"
            app:iconPadding="@dimen/main_icon_padding"
            app:iconTint="@color/yp_black"
            app:iconSize="@dimen/main_button_icon_size"
            app:iconGravity="textStart"
            app:cornerRadius="@dimen/main_button_corner_radius" />

        <Button
            android:id="@+id/media"
            android:text="@string/media"
            android:textAllCaps="false"
            android:backgroundTint="@color/yp_white"
            android:textColor="@color/yp_black"
            android:textSize="@dimen/main_text_size"
            android:layout_width="match_parent"
            android:layout_margin="@dimen/main_button_margin"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:icon="@drawable/media"
            app:iconPadding="@dimen/main_icon_padding"
            app:iconTint="@color/yp_black"
            app:iconSize="@dimen/main_button_icon_size"
            app:iconGravity="textStart"
            app:cornerRadius="@dimen/main_button_corner_radius" />

        <Button
            android:id="@+id/settings"
            android:text="@string/settings"
            android:textAllCaps="false"
            android:backgroundTint="@color/yp_white"
            android:textColor="@color/yp_black"
            android:textSize="@dimen/main_text_size"
            android:layout_width="match_parent"
            android:layout_margin="@dimen/main_button_margin"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:icon="@drawable/settings"
            app:iconPadding="@dimen/main_icon_padding"
            app:iconTint="@color/yp_black"
            app:iconSize="@dimen/main_button_icon_size"
            app:iconGravity="textStart"
            app:cornerRadius="@dimen/main_button_corner_radius" />

    </LinearLayout>

</LinearLayout>